--- a/public/css/style.css
+++ b/public/css/style.css
@@ -428,7 +428,7 @@ input:focus {
 
 @media only screen and (max-width: 1100px) {
     body {
-      /*  flex-direction: column; /*DESKTOP MOBILE TOGGLE*/
+        flex-direction: column; /*DESKTOP MOBILE TOGGLE*/
     }
 
     #console-box{
